--- a/static/misgastos.css
+++ b/static/misgastos.css
@@ -1,11 +1,11 @@
-/* 
+/*
 	Classy yet somehow fancy
 	table style created by Radu Bilei
 	for Chris Heilmann's CSS Table Gallery
 	http://twitter.com/radubilei
 	http://icant.co.uk/csstablegallery
 
-    
+
     #459E00 url(images/ui-bg_highlight-hard_15_459e00_1x100.png) repeat-x scroll 50% 50%
 */
 
@@ -14,7 +14,7 @@ table.theme,table.theme  tr th, table.theme tr td	{	border:none;  border-collaps
 table.theme		{	background:#459E00;  -webkit-border-radius:6px; -moz-border-radius:6px; border-radius:6px; -webkit-box-shadow:1px 1px 10px rgba(0,0,0,0.3); -moz-box-shadow:1px 1px 10px rgba(0,0,0,0.3)}
 caption		{	text-align:left; text-transform:uppercase; font-size:150%; font-weight:bold; padding:1.5em 0; color:black}
 
-table.theme thead, 
+table.theme thead,
 table.theme tfoot			{	color:white; }
 
 table.theme thead th				{	padding:0.5em 1em; text-transform:uppercase; text-align:left; }
@@ -25,7 +25,7 @@ table.theme tbody th				{	font-size:100%; padding:0.5em 0em; background-color:#e
 table.theme tbody th				{	color:#222;	text-align:right; background-image:url(/static/images/tabel.png); background-repeat:repeat-y; border-right:1px solid #ccc}
 table.theme tbody td:last-child		{	border-right:1px solid black}
 
-table.theme  tbody tr.odd th, 
+table.theme  tbody tr.odd th,
 table.theme  tbody tr.odd td			{	background-color:#eee; color:#222}
 
 table.theme  tfoot td,
@@ -39,9 +39,9 @@ table.theme a:hover	{	text-decoration:none; background:black; color:white; -webk
 ::-moz-selection{	background:#202020; color:white}
 ::selection		{	background:#202020; color:white}
 
-thead ::-moz-selection, 
+thead ::-moz-selection,
 tfoot ::-moz-selection	{	background:white; color:#202020}
-thead ::selection, 
+thead ::selection,
 tfoot ::selection		{	background:white; color:#202020}
 
 
@@ -65,7 +65,7 @@ table.table_abc th {
 }
 table.table_abc td {
     text-align:center;
-    
+
 }
 table.table_abc th.nombre {
     text-align:center;
@@ -111,12 +111,12 @@ table.table_abc th.nombre {
 
  ul.errorlist {
         margin: 0;
-        padding: 0;
-      
-        
+        padding-left: 10px;
+        float:right;
+
     }
     .errorlist li {
-    
+
     -moz-background-clip:border;
     -moz-background-inline-policy:continuous;
     -moz-background-origin:padding;
@@ -127,9 +127,10 @@ table.table_abc th.nombre {
         background-color: #b05454;
         color: white;
         display: block;
-      
+
         margin: 0px;
-        padding: 2px 3px;
+        padding-left: 9px;
+        padding-right: 9px;
     }
 
 #dialog_link {
@@ -144,11 +145,20 @@ text-decoration:none;
 #id_nota {
     height: 100px;
 }
-    
+
 .total {
     font-size:28px;
     font-style:bold;
     margin-left:5px;
     margin-right:5px;
  }
-    
+
+button {
+    padding:0.2em 0.6em 0.3em;
+    width:auto;
+}
+
+.button-icon {
+    float:left;
+    margin-right:0.3em;
+}
