--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 <link href="/static/default.css" rel="stylesheet" type="text/css" />
 <link href="/static/misgastos.css" rel="stylesheet" type="text/css" />
 
-<link type="text/css" href="/static/jquery/css/south-street/jquery-ui-1.7.2.custom.css" rel="stylesheet" />	
+<link type="text/css" href="/static/jquery/css/south-street/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="/static/jquery/js/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/static/jquery/js/jquery-ui-1.7.2.custom.min.js"></script>
 {% block js %}
@@ -58,7 +58,7 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 			<div class="entry">
 				<p>
                     Intro
-                
+
                 </p>
 			</div>
 			<div class="meta">
@@ -66,48 +66,51 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 			</div>
 		</div>
         -->
-		<div class="post">
-     <div class="ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs2">
-   <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
-    
-     <li class="{%block csstabgasto%}ui-state-default ui-corner-top ui-tabs-selected ui-state-active{% endblock%}">
-        <a href="{% url index %}">Mis gastos</a>
-     </li>
-      <li class="{%block csstabtipo%}ui-state-default ui-corner-top{% endblock %}">
-        <a href="{%url list_tipos%}">Tipos</a>
-      </li>
-      
-      <li class="{%block csstabcategoria%}ui-state-default ui-corner-top{% endblock %}">
-        <a href="{%url list_categorias%}">Categorias</a>
-      </li>
-					
-      </ul>
-      <div class="contenido">
-        {% block content%}
-        {% endblock%}
-      </div>
+
+<div class="post">
+    {% block nocontent %}
+             <div class="ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs2">
+           <ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
+
+             <li class="{%block csstabgasto%}ui-state-default ui-corner-top ui-tabs-selected ui-state-active{% endblock%}">
+                <a href="{% url index %}">Mis gastos</a>
+             </li>
+              <li class="{%block csstabtipo%}ui-state-default ui-corner-top{% endblock %}">
+                <a href="{%url list_tipos%}">Tipos</a>
+              </li>
+
+              <li class="{%block csstabcategoria%}ui-state-default ui-corner-top{% endblock %}">
+                <a href="{%url list_categorias%}">Categorias</a>
+              </li>
+
+              </ul>
+              <div class="contenido">
+                {% block content%}
+                {% endblock%}
+              </div>
+        </div>
+    {% endblock %}
 </div>
 
-		</div>
-		
 	</div>
 	<!-- end content -->
 	<!-- start sidebar -->
 	<div id="sidebar">
+    {% if user.is_authenticate %}
 		<ul>
 			<li id="search">
 				{% load gasto%}
-                
+
                 <div class="ui-widget-content ui-corner-all center">
                     <div class="ui-widget-header ui-state-default ui-corner-top" style="align:center">TOTAL</div>
-                
+
                 $
                 <span style="font-size:28px;">
                 {% total ""%}
                 </span>
                 </div>
 			</li>
-        
+
 			<li>
                 <div style="padding-left:25px;" class="ui-widget-content ui-corner-all center">
                 <ul>
@@ -118,6 +121,7 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
                </div>
 			</li>
 		</ul>
+    {% endif %} {# endif user logged#}
 	</div>
 	<!-- end sidebar -->
 	<div style="clear: both;">&nbsp;</div>
@@ -131,7 +135,9 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 			<li><a href="http://github.com/zodman/misgastos">github</a></li>
 		</ul>
 	</div>
-	<p id="legal">(c) 2008 Mis gastos. Design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
+    <p id="legal">
+        (c) 2008 Mis gastos. Design by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.
+    </p>
 </div>
 <!-- end footer -->
 </body>
