--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -44,9 +44,11 @@ function abrirRegistro(){
 
 
         <div id="create_form">
+        <form id="registeruser" method="post" action="">
             <table>
                 {{ form_create }}
             </table>
+        </form>
         </div>
        {% endif %}
     </div>
