Agregando mensaje en pagina principal

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -3,8 +3,12 @@
 {%block nocontent %}
 <div class="ui-widget ui-widget-head">
 	{% block content%}
-	<div class="ui-widget wi-widget-content">
-		aaaaaa
+	<div class="ui-widget wi-widget-content padding">
+        <p>
+		Mis gastos es un pet proyect (proyecto chiquito) el cual se centra en tener un registro de los gastos
+                que se tienen.<br>
+                Para reporte de problemas <a href="http://github.com/zodman/misgastos/issues">http://github.com/zodman/misgastos/issues</a>
+        </p>
 	</div>
 	{% endblock%}
 </div>
