--- a/static/visualize-light.css
+++ b/static/visualize-light.css
@@ -1,15 +1,8 @@
 /* page styles */
-body { font-size:62.5%; }
 
 /*demo styles*/
-table {width: 500px; height: 200px; margin-left: 30px; }
-table.accessHide { position: absolute; left: -999999px; }
-td, th {  font-size: 1.2em; padding: 2px; width: 13%; }
-th { background-color:#f4f4f4; } 
-caption { font-size: 1.5em;  }
-
 /*visualize extension styles*/
-.visualize { margin: 60px 0 0 30px; padding: 70px 40px 90px; background: #ccc url(../images/chartbg-vanilla.png) top repeat-x; border: 1px solid #ddd; -moz-border-radius: 12px; -webkit-border-radius: 12px; border-radius: 12px; }
+.visualize { margin-top:30px; margin-left:auto; margin-right:auto; padding: 70px 40px 90px; background: #ccc url(../images/chartbg-vanilla.png) top repeat-x; border: 1px solid #ddd; -moz-border-radius: 12px; -webkit-border-radius: 12px; border-radius: 12px; }
 .visualize canvas { border: 1px solid #aaa; margin: -1px; background: #fff; }
 .visualize-labels-x, .visualize-labels-y { top: 70px; left: 40px; z-index: 100; }
 .visualize-pie .visualize-labels { position: absolute; top: 70px; left: 40px; }
