--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,10 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 <title>Mis gastos</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="/static/default.css" rel="stylesheet" type="text/css" />
-<link href="/static/misgastos.css" rel="stylesheet" type="text/css" />
+<link href="{{MEDIA_URL}}default.css" rel="stylesheet" type="text/css" />
+<link href="{{MEDIA_URL}}misgastos.css" rel="stylesheet" type="text/css" />
 
-<link type="text/css" href="/static/jquery/css/south-street/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+<link type="text/css" href="{{MEDIA_URL}}jquery/css/south-street/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="/static/jquery/js/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/static/jquery/js/jquery-ui-1.7.2.custom.min.js"></script>
 <script type="text/javascript" src="/static/jquery/jquery.sparkline.min.js"></script>
