--- a/templates/principal.html
+++ b/templates/principal.html
@@ -11,6 +11,7 @@
         <p>
 		Mis gastos es un pet proyect (proyecto chiquito) el cual se centra en tener un registro de los gastos
                 que se tienen.<br>
+        Se ah agregado un registros para ingreso y una pestaña de graficas usando canvas y html5
                 Para reporte de problemas <a href="http://github.com/zodman/misgastos/issues">http://github.com/zodman/misgastos/issues</a>
         </p>
 	</div>
