--- a/templates/balance.html
+++ b/templates/balance.html
@@ -51,5 +51,10 @@ $(document).ready(function(){
             </tr>
 
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="{{ingresos|length}}"></td>
+            </tr>
+        </tfoot>
     </table>
 {%endblock%}
