--- a/templates/base.html
+++ b/templates/base.html
@@ -17,13 +17,29 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 <title>Mis gastos</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
-<link href="/static/default.css" rel="stylesheet" type="text/css" />
-<link href="/static/misgastos.css" rel="stylesheet" type="text/css" />
+<link href="{{MEDIA_URL}}default.css" rel="stylesheet" type="text/css" />
+<link href="{{MEDIA_URL}}misgastos.css" rel="stylesheet" type="text/css" />
 
-<link type="text/css" href="/static/jquery/css/south-street/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
+<link type="text/css" href="{{MEDIA_URL}}jquery/css/south-street/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="/static/jquery/js/jquery-1.3.2.min.js"></script>
 <script type="text/javascript" src="/static/jquery/js/jquery-ui-1.7.2.custom.min.js"></script>
+<script type="text/javascript" src="/static/jquery/jquery.sparkline.min.js"></script>
+    {% if user.is_authenticated %}
+         <script type="text/javascript" src="/static/misgastos.js"></script> 
+    {% endif %}
+
+
 {% block js %}
+<script type="text/javascript">
+$(document).ready(function(){
+ $("#content").css("width","100%");
+ $("#content").css("padding-left","0px");
+
+    $("table").visualize({type:'line',width: '760px'});
+});
+</script> 
+
+
 {% endblock%}
 </head>
 <body>
@@ -71,15 +87,22 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
         {% if user.is_authenticated %}
 	     <div class="ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs2">
 		<ul class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
-		     <li class="{%block csstabgasto%}ui-state-default ui-corner-top ui-tabs-selected ui-state-active{% endblock%}">
+		     <li class=" ui-state-default ui-corner-top{%block csstabgasto%}{% endblock%}">
 			<a href="{% url index %}">Mis gastos</a>
 		     </li>
-		      <li class="{%block csstabtipo%}ui-state-default ui-corner-top{% endblock %}">
-			<a href="{%url list_tipos%}">Tipos</a>
+		      <li class=" ui-state-default ui-corner-top  {%block csstabtipo%}{% endblock %}">
+			<a href="{%url list_tipos%}">SubCategorias</a>
 		      </li>
-		      <li class="{%block csstabcategoria%}ui-state-default ui-corner-top{% endblock %}">
-			<a href="{%url list_categorias%}">Categorias</a>
+		      <li class="ui-state-default ui-corner-top {%block csstabcategoria%}{% endblock %}">
+			    <a href="{%url list_categorias%}">Categorias</a>
 		      </li>
+              <li class=" ui-state-default ui-corner-top{%block csstabingreso%}{%endblock%}">
+                <a href="{% url list_ingresos %}">Ingreso</a>
+              </li>
+                <li class=" ui-state-default ui-corner-top{%block csstabbalance%}{%endblock%}">
+                <a href="{% url show_balance %}">Balance</a>
+              </li>
+
 		</ul>
 		      <div class="contenido">
 			{% block content%}
@@ -93,8 +116,10 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
   </div><!-- PAGE -->
 
 	<!-- start sidebar -->
+{% block leftmenu %}
 	<div id="sidebar">
     {% if user.is_authenticated %}
+            
 		<ul>
 			<li id="search">
 				{% load gasto%}
@@ -111,17 +136,30 @@ Description: A two-column, fixed-width and lightweight template ideal for 1024x7
 
 			<li>
                 <div style="padding-left:25px;" class="ui-widget-content ui-corner-all center">
-                <ul>
-                <li>{% echomonth 0 "%b %Y" %}: $ {% totalmonth user.username 0%}</li>
-                <li>{% echomonth 1 "%b %Y" %}: $ {% totalmonth user.username 1%}</li>
-               <li> {% echomonth 2 "%b %Y" %}: $ {% totalmonth user.username 2%}</li>
+                    <span style="float:right;" class=" link ui-icon ui-icon-pencil" onclick="change_number_months('{% url change_month%}');"></span>
+                    <div id="change_month_number">
+                       Cambiar de {{user.get_profile.number_months}} a:  <input type="text" id="id_number_month">
+                    </div>
+                <ul id="graph">
+                {%for i in user.get_profile.get_number_months %}
+                    <li>
+                        <span class="sparkline{{i}}"></span>
+                            {% echomonth i "%b %Y" %}: $ {% totalmonth user.username i %}
+                    </li>
+                {%endfor%}
                 </ul>
+                <script type="text/javascript">
+                    $(".sparkline0").sparkline({% graphmonth 0 user.username%});
+                    $(".sparkline1").sparkline({% graphmonth 1 user.username%});
+                    $(".sparkline2").sparkline({% graphmonth 2 user.username%});
+                </script>
                </div>
 			</li>
 		</ul>
     {% endif %} {# endif user logged#}
 	</div>
 	<!-- end sidebar -->
+{% endblock %}
 	<div style="clear: both;">&nbsp;</div>
 </div>
 <!-- end page -->
